test/pass/internal/if_raise_return_fold.lily
define f(a: Integer) : Integer
{
    if a == 1:
        raise ValueError("")
    else:
        raise ValueError("")
}
